Correccion seccion Qatar

--- a/pages/viajes/qatar.html
+++ b/pages/viajes/qatar.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="../../index.html">Inicio</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="menuElegi">
+                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="menuElegi">
                       ELEGÍ TU DESTINO
                     </a>
                     <ul class="dropdown-menu">
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="../../pages/aboutus.html">Sobre Nosotros</a>
                       </li>
                       <li class="nav-item" >
-                        <a class="nav-link"  href="../../faq.html">FAQ</a>
+                        <a class="nav-link"  href="../../pages/faq.html">FAQ</a>
                       </li>
                   </li>
                 </ul>
@@ -57,7 +57,7 @@
             </div>
         </nav>
 
-    <div><img class="slider" src="../../imgs/slidersingular.jpg" alt="Slider chico viendo por la ventana un cohete"></div>
+    <div><img class="slider" src="../../imgs/sliderqatar.jpg" alt="Argentina campeon mundial"></div>
 
 
     </header>
